objects/Newsletter__c.object
<CustomObject>
    <description>Details of the newsletter sent by the Client team once in a while to its members.</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_list_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribution list 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_list_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribution list 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_list_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribution list 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Editorial__c</fullName>
        <label>Editorial</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag set when the newsletter has been sent.</description>
        <label>Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>Newsletter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Sent__c</columns>
        <columns>Distribution_list_1__c</columns>
        <columns>Distribution_list_2__c</columns>
        <columns>Distribution_list_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Newsletters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>